# udigest

./: .gitignore  README.md  agent.py  main.py  pyproject.toml  report_trajectory.md
scrapers/: __init__.py  hfpapers.py
templates/: arxiv_item.jinja2  hfpaper_item.jinja2  trajectory.jinja2
